Suggestion: enable vector module automatically in all cases ()